// Copyright (C) 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package memory;
option java_package = "com.google.gapid.proto.service.memory";
option java_outer_classname = "Memory";
// cc_package

// PoolNames is the set of well known PoolID values.
enum PoolNames {
    // Application is the PoolID of Pool representing the application's memory
    // address space.
    Application = 0;
}

message ID {
    bytes data = 1;
}

// Internal to GAPIS.
message SubsliceResolvable {
	ID slice = 1;
	uint64 first = 2;
	uint64 count = 3;
}
